Resolved homepage slideshow overflow on mobile.

--- a/sites/all/themes/osbee/css/osbee.css
+++ b/sites/all/themes/osbee/css/osbee.css
@@ -3086,6 +3086,7 @@ select.with-style option[selected="selected"] {
 
   html, body {
     max-width: 100%;
+    overflow: hidden;
     font-family: MetaOT !important;
     font-size: 16px;
     background: #000000;
