--- a/sites/all/themes/osbee/sass/_responsive.scss
+++ b/sites/all/themes/osbee/sass/_responsive.scss
@@ -55,6 +55,7 @@ $xlarge: 1024px;
     html, body {
         // Confine mobile width to the width of the screen.
         max-width: 100%;
+        overflow: hidden;
         font-family: MetaOT !important;
         font-size: 16px;
         background: $black;
